2013-04-16  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: complete refactory due to DataForms planned usage.

2012-11-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/RainbrurpgMetaserverPlugin.txt: add a section
	on REST api and details on server_list REST function.
	* src/foswiki_plugin/RainbrurpgMetaserverPlugin.pm: register
	the server_list REST function.
	* src/foswiki_plugin/functions.pm (getYamlServerList): add
	error and error-since fields.


2012-11-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/RainbrurpgMetaserverPlugin.txt: Improve
	documentation for the 'Error' XML node.

	* src/foswiki_plugin/functions.pm (uptimeToStr): Implementation
	splited from getUptime.
	* src/foswiki_plugin/functions.pm (getAttributeContent): Implemented
	to get the content of Error's since attribute.
	* src/foswiki_plugin/functions.pm: Handles the 'Error' field of
	XML file and correctly print %RB_SERVER_ERROR% macro's table.

2012-11-08  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/ServerDetail.txt: Page started.

	* src/foswiki_plugin/RainbrurpgMetaserverPlugin.txt: Improve
	documentation for XML nodes.

	* src/foswiki_plugin/RainbrurpgMetaserverPlugin.pm: Revome stuff
	related to %IF_NOYAML% macro.

	* src/foswiki_plugin/functions.pm: $filename uses foswiki's variable
	to get host URL and pub/ dirname.

2012-11-02  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/functions_Test.pl (test_Uptime_hours): First
	implementation.
	* src/foswiki_plugin/functions_Test.pl (test_Uptime_minutes): First
	implementation.
	* src/foswiki_plugin/functions_Test.pl (test_Uptime_seconds): First
	implementation.
	* src/foswiki_plugin/functions.pm (getUptime): write a better
	documentation with parameter and return value.

2012-04-25  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/functions_Test.pl
	(test_getNodeContent_incorrectChildName): test if getNodeContent()
	correctly returns 0 if no child exist with the given name.