@@ -1,0 +1,1 @@
+Here is the home topic of the Web created by <nop>RainbruRPG metaserver.
